helm/dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payuw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-09960e517541935ab    
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - sandbox2-dev.paywalletllc.com
    secretName: sandbox2-dev
  rules:
  - host: sandbox2-dev.paywalletllc.com
    http:
      paths:
      - path: /eureka(/|$)(.*)
        backend:
          serviceName: eureka-server
          servicePort: 8761
      - path: /(|$)(.*)
        backend:
          serviceName: kong-kong-proxy
          servicePort: 80
      - path: /konga(/|$)(.*)
        backend:
          serviceName: konga
          servicePort: 80
      - path: /keycloak(/|$)(.*)
        backend:
          serviceName: keycloak2-http
          servicePort: 80
      - path: /fineract(/|$)(.*)
        backend:
          serviceName: fineract
          servicePort: 80
      - path: /fineract-provider(/|$)(.*)
        backend:
          serviceName: fineract
          servicePort: 80
