helm/prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payuw-prod-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-072ba05cc66e7832e
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts: ["idp.paywalletllc.com", "gateway.paywalletllc.com", "services.paywalletllc.com", "va.paywalletllc.com", "payments.paywalletllc.com"]
    secretName: prod-tls-secret
  rules:
  - host: idp.paywalletllc.com
    http:
      paths:          
      - path: /(|$)(.*)
        backend:
          serviceName: keycloak-http
          servicePort: 80
  - host: gateway.paywalletllc.com
    http:
      paths:
      - path: /(|$)(.*)
        backend:
          serviceName: konga
          servicePort: 80
  - host: services.paywalletllc.com
    http:
      paths:
      - path: /(|$)(.*)
        backend:
          serviceName: kong-kong-proxy
          servicePort: 80
  - host: va.paywalletllc.com
    http:
      paths:
      - path: /(|$)(.*)
        backend:
          serviceName: fineract
          servicePort: 80
  - host: payments.paywalletllc.com
    http:
      paths:
      - path: /borrower(|$)(.*)
        backend:
          serviceName: borrower-verification-micro-app
          servicePort: 80
  - host: payments.paywalletllc.com
    http:
      paths:
      - path: /provider1(|$)(.*)
        backend:
          serviceName: atomicfi-micro-app
          servicePort: 80
  - host: payments.paywalletllc.com
    http:
      paths:
      - path: /provider2(|$)(.*)
        backend:
          serviceName: argyle-micro-app
          servicePort: 80
  - host: payments.paywalletllc.com
    http:
      paths:
      - path: /allocation(|$)(.*)
        backend:
          serviceName: customer-account-verification-micro-app
          servicePort: 80
