helm/uat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payuw-uat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-02c6ab9a941b1d2eb
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /eureka(/|$)(.*)
        backend:
          serviceName: eureka-server
          servicePort: 8761
      - path: /notification-service(/|$)(.*)
        backend:
          serviceName: notification-service
          servicePort: 80
