helm/uat-ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payuw-uat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-02c6ab9a941b1d2eb
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts: ["sandbox2-uat.paywalletllc.com", "konga-uat.paywalletllc.com"]
    secretName: sandbox2-uat
  rules:
  - host: sandbox2-uat.paywalletllc.com
    http:
      paths:
      - path: /eureka(/|$)(.*)
        backend:
          serviceName: eureka-server
          servicePort: 8761
      - path: /keycloak(/|$)(.*)
        backend:
          serviceName: keycloak1-http
          servicePort: 80
  - host: konga-uat.paywalletllc.com
    http:
      paths:
      - path: /konga(/|$)(.*)
        backend:
          serviceName: konga
          servicePort: 80
